[workspace]
members = ["example"]

[package]
name = "gaming"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
ash = "0.38.0"
log = "0.4.22"
mint = "0.5.9"
num = "0.4.3"
rand = "0.8.5"
serde = "1.0.215"
thiserror = "2.0.3"
winit = "0.30.5"
cgmath = { version = "0.18.0", features = ["swizzle", "rand", "mint", "serde"] }
ash-window = "0.13.0"